<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NatalActivity">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/fim"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/iv_movie_final"
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:layout_below="@id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:layout_below="@id/iv_movie_final"
            android:text="@string/espero_que_tenha_gostado_da_brincadeira"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_content_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginBottom="50dp"
            android:text="@string/feliz_natal_v_zinho"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>